final Checking dummy

--- a/Vitorer-Khobor/index.html
+++ b/Vitorer-Khobor/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ভিতরের খবর</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Open Graph for Social Sharing -->
+  <meta property="og:title" content="রাবি শিক্ষার্থী কর্তৃক ক্যাম্পাসে ঘুরতে আসা বহিরাগত শিক্ষার্থীদের ছিনতাই" />
+  <meta property="og:description"
+    content="পেঁপের নিরব ছলনা দিনের পর দিন চলছে, আলুর সরলতার সুযোগ নিয়ে চলছে প্রতারণা..." />
+  <meta property="og:image" content="https://i.ibb.co/Y4ZnDZpB/388c3cf0-e65f-4ef6-a027-36f52d956c0f.jpg" />
+  <meta property="og:url" content="https://684086e07e40fd0c95a85931--vitorer-khobor.netlify.app/news/1" />
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="ভিতরের খবর" />
+
+  <!-- Optional: Twitter Preview -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="রাবি শিক্ষার্থী কর্তৃক ক্যাম্পাসে ছিনতাই" />
+  <meta name="twitter:description" content="পেঁপের নিরব ছলনা দিনের পর দিন চলছে..." />
+  <meta name="twitter:image" content="https://i.ibb.co/Y4ZnDZpB/388c3cf0-e65f-4ef6-a027-36f52d956c0f.jpg" />
+
+
+
+
+
+
+  <title>ভিতরের খবর</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
